--- a/server/vercel.json
+++ b/server/vercel.json
@@ -8,8 +8,9 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/"
+      "src": "/[^.]+",
+      "dest": "/",
+      "status": 200
     }
   ]
 }
